# tk-multi-downloadnotes

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  conftest.py  info.yml  pyproject.toml
docs/superpowers/specs/: 2026-07-10-tk-multi-downloadnotes-design.md
python/: __init__.py
python/app/: __init__.py  download.py  naming.py  paths.py  reveal.py  shotgrid.py
tests/: test_download.py  test_naming.py  test_paths.py  test_reveal.py  test_shotgrid.py  test_smoke.py
